# etl_contadoria

./: README.md  dockerfile  pyproject.toml  token.json
contadoria_tempo_real/: data_backup20241023132118_TJPEReports.xlsx  data_backup20241023195034_TJPEReports.xlsx  data_transformfinal_tempo_real.xlsx
contadoria_tempo_real/pipeline/: credentials.json
src/: app.py  requirements.txt
